--- a/saas/components/_menu.scss
+++ b/saas/components/_menu.scss
@@ -7,10 +7,19 @@
   height: 100vh;
   background-color: #fff;
   padding: 40px;
+  opacity: 1;
+  visibility: hidden;
+  pointer-events: none;
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.menu-open .is-hidden {
+  opacity: 0;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .menu-open {
@@ -40,9 +49,6 @@
   justify-content: center;
   margin-left: auto;
   margin-bottom: 16px;
-}
-
-.mob-menu-list {
 }
 
 .mob-menu-link {
