--- a/saas/utils/_vars.scss
+++ b/saas/utils/_vars.scss
@@ -12,6 +12,10 @@ html {
 body {
   font-family: Roboto, sans-serif;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
 ul {
   list-style: none;
   padding: 0;
