--- a/saas/components/_menu.scss
+++ b/saas/components/_menu.scss
@@ -107,13 +107,10 @@
   fill: #ffffff;
 }
 
-.mob-menu-pos {
+.mob-menu > .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow: auto;
-}
-
-.menu-container {
 }
