--- a/saas/components/_menu.scss
+++ b/saas/components/_menu.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   background-color: #fff;
   padding: 40px;
-  opacity: 1;
+  opacity: 0;
   visibility: hidden;
   pointer-events: none;
 
@@ -17,9 +17,9 @@
 }
 
 .mob-menu.is-open {
-  opacity: 0;
+  opacity: 1;
   visibility: visible;
-  pointer-events: auto;
+  pointer-events: none;
 }
 
 .menu-open {
@@ -107,7 +107,7 @@
   fill: #ffffff;
 }
 
-.mob-menu > .container {
+.mob-menu.container {
   height: 100%;
   display: flex;
   flex-direction: column;
