--- a/css/main.css
+++ b/css/main.css
@@ -1277,7 +1277,7 @@ img {
 .mob-menu.is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events: none;
+  pointer-events: auto;
 }
 
 .menu-open {
