--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -12,12 +12,25 @@
   line-height: 24px;
   color: #e7e9fc;
   margin-bottom: 72px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    justify-content: flex-start;
+    margin-left: 96px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
 }
 
 .footer__button {
@@ -118,10 +131,6 @@
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-
-  @media screen and (min-width: 768px) {
-    // width: 264px;
-  }
 
   &::placeholder {
     font-size: 16px;
