--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -34,12 +34,18 @@
 .header__mail {
   color: var(--secondary-text-color);
   font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
   text-decoration: none;
   color: #434455;
   transition: color var(--anim-fast);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
   &:focus,
   &:hover {
