--- a/saas/components/_section.scss
+++ b/saas/components/_section.scss
@@ -1,4 +1,9 @@
 %section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
