--- a/saas/components/_solution.scss
+++ b/saas/components/_solution.scss
@@ -3,9 +3,11 @@
 }
 
 .solution__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 72px;
+
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
     gap: 24px;
   }
 
@@ -60,7 +62,6 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 72px;
 }
 
 .icon-antena::before {
