--- a/saas/components/_team.scss
+++ b/saas/components/_team.scss
@@ -17,9 +17,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 72px;
+  row-gap: 72px;
+
   @media screen and (min-width: 768px) {
-    gap: 24px;
+    column-gap: 24px;
   }
 }
 
