--- a/css/main.css
+++ b/css/main.css
@@ -654,6 +654,7 @@ img {
   line-height: 24px;
   color: #e7e9fc;
   margin-bottom: 72px;
+  text-align: left;
 }
 @media screen and (min-width: 1200px) {
   .footer__text {
@@ -667,23 +668,15 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer__container {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    margin-left: 96px;
+    width: 528px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    width: 100%;
   }
 }
 
@@ -854,11 +847,23 @@ img {
   }
 }
 
+.footer__logo__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media screen and (max-width: 767px) {
+  .footer__logo__container {
+    text-align: center;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer__logo__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     gap: 24px;
   }
 }
